--- a/main.html
+++ b/main.html
@@ -11,6 +11,15 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<h1>3 random videos</h1>
+<nav>
+	<ul>
+		<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">Home</a>
+		<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">About us</a>
+		<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">Contact us</a>
+	</ul>
+</nav>
+
 </body>
 
 </html>
