--- a/main.html
+++ b/main.html
@@ -14,17 +14,23 @@
 	<h1>3 random videos</h1>
 <nav>
 	<ul>
-		<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" target="_blank">Home</a>
-		<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" target="_blank">About us</a>
-		<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" target="_blank">Contact us</a>
+		<a href="#">Home</a>
+		<a href="#">About us</a>
+		<a href="#">Contact us</a>
 	</ul>
 </nav>
 
-	<!-- <video controls>
+	<video controls>
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+	</video>
+		
+		<video controls>
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+	</video>
+			<video controls>
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
-	</video> -->
+	</video>
+		
 
 </body>
 
