--- a/main.html
+++ b/main.html
@@ -14,9 +14,9 @@
 	<h1>3 random videos</h1>
 <nav>
 	<ul>
-		<a href="#">Home</a>
-		<a href="#">About us</a>
-		<a href="#">Contact us</a>
+		<li><a href="#">Home</a></li>
+		<li><a href="#">About us</a></li>
+		<li><a href="#">Contact us</a></li>
 	</ul>
 </nav>
 
